Streamlined all class file in order to execute

--- a/AutomationTests/App.config
+++ b/AutomationTests/App.config
@@ -1,11 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings"
+                  type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+
+      <section name="YourProjectName.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               requirePermission="false" />
+
+    </sectionGroup>
+    <!--</configSections>-->
+  <!-- Custom Configuration Section Example -->
+    <section name="environments" type="System.Configuration.NameValueSectionHandler" />
+  </configSections>
   <appSettings>
     <!-- URL Configuration -->
     <add key="BaseUrl" value="https://automationtesting.in/" />
 
     <!-- Browser Configuration -->
     <add key="Browser" value="Chrome" />
+    <!--<add key="Browser" value="Edge" />-->
 
     <!-- Timeout Settings (in seconds) -->
     <add key="ImplicitWaitTimeout" value="10" />
@@ -13,6 +27,7 @@
     <add key="ExplicitWaitTimeout" value="20" />
 
     <!-- Logging Configuration -->
+    <add key="ReportType" value="Allure" />
     <add key="LogLevel" value="Info" />
     <add key="LogFilePath" value="C:\Logs\TestLog.txt" />
   </appSettings>
@@ -22,13 +37,13 @@
     <add name="DatabaseConnection" connectionString="Server=localhost;Database=TestDB;User Id=sa;Password=yourpassword;" />
   </connectionStrings>
 
-  <!-- Custom Configuration Section Example -->
-  <configSections>
-    <section name="environments" type="System.Configuration.NameValueSectionHandler" />
-  </configSections>
+ 
   <environments>
     <add key="Development" value="https://dev.example.com" />
     <add key="Staging" value="https://staging.example.com" />
     <add key="Production" value="https://example.com" />
   </environments>
+  <system.diagnostics>
+    <trace autoflush="true" />
+  </system.diagnostics>
 </configuration>
