--- a/Automation.PageObjects/Automation.PageObjects.csproj
+++ b/Automation.PageObjects/Automation.PageObjects.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Registration\RegisterFormPage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
