--- a/AutomationCore/packages.config
+++ b/AutomationCore/packages.config
@@ -1,16 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Allure.Net.Commons" version="2.12.1" targetFramework="net472" />
+  <package id="AspectInjector" version="2.8.1" targetFramework="net472" />
   <package id="BoDi" version="1.5.0" targetFramework="net48" />
+  <package id="CsvHelper" version="32.0.3" targetFramework="net472" />
+  <package id="Cucumber.Messages" version="6.0.1" targetFramework="net472" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net48" />
   <package id="Gherkin" version="19.0.3" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.29.1" targetFramework="net472" />
+  <package id="Lib.Harmony" version="2.3.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="MimeTypesMap" version="1.0.8" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="3.6.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Selenium.Support" version="4.27.0" targetFramework="net48" />
   <package id="Selenium.WebDriver" version="4.27.0" targetFramework="net48" />
   <package id="Selenium.WebDriver.ChromeDriver" version="131.0.6778.8500" targetFramework="net48" />
-  <package id="SpecFlow" version="3.9.74" targetFramework="net48" />
+  <package id="SpecFlow" version="3.9.74" targetFramework="net472" />
   <package id="SpecFlow.Internal.Json" version="1.0.8" targetFramework="net48" />
+  <package id="SpecFlow.MsTest" version="3.9.74" targetFramework="net472" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="3.9.74" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
